// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1ek02iu-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-13bgdik-TeaserWrapper e18of27r18"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          >
            <time
              class="css-4ifncu-Teaser"
              datetime="2023-01-01T00:00:00.000Z"
            >
              | 01.01.2023 
            </time>
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-jx9mmb-TeaserWrapper e18of27r18"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-1ml5tfp-TeaserWrapper e18of27r18"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-1gk2foz-TeaserPreTitle-TeaserPreTitleNoContent e18of27r5"
          />
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Teambesprechung vom 23.05.
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r18"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          >
            <time
              class="css-4ifncu-Teaser"
              datetime="2023-01-01T00:00:00.000Z"
            >
              | 01.01.2023 
            </time>
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r18"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r18"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-1gk2foz-TeaserPreTitle-TeaserPreTitleNoContent e18of27r5"
          />
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Teambesprechung vom 23.05.
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r18"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          >
            <time
              class="css-4ifncu-Teaser"
              datetime="2023-01-01T00:00:00.000Z"
            >
              | 01.01.2023 
            </time>
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r18"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r18"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-1gk2foz-TeaserPreTitle-TeaserPreTitleNoContent e18of27r5"
          />
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Teambesprechung vom 23.05.
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-8p11sj-TeaserWrapper e18of27r18"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          >
            <time
              class="css-4ifncu-Teaser"
              datetime="2023-01-01T00:00:00.000Z"
            >
              | 01.01.2023 
            </time>
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-z4j0q-TeaserWrapper e18of27r18"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-w4rdaf-TeaserPreTitle-TeaserPreTitleStyled e18of27r4"
          >
            <span
              class="css-zwyzu6-PreTitleStyled e18of27r3"
            >
              Pre Title
            </span>
          </span>
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Title
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
    <article
      class="css-wylm69-TeaserWrapper e18of27r18"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-f1ts9n-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-xjjwu2-ImageWrapperStyled e18of27r16"
        >
          <img
            alt="An image description"
            class="css-1jyk67p-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
        </div>
        <div
          class="css-1qua5sx-TeaserInnerWrapper-TeaserContent-TeaserContentStyled e18of27r6"
        >
          <span
            class="css-1gk2foz-TeaserPreTitle-TeaserPreTitleNoContent e18of27r5"
          />
          <h1
            class="css-1chepvk-TeaserTitle-TeaserTitlesStyled e18of27r2"
          >
            Teambesprechung vom 23.05.
          </h1>
          <div
            class="css-n1xmfa-TeaserLeadStyled e18of27r0"
          >
            Lead
          </div>
          <p
            class="css-1bha07a-AuthorsAndDate e18of27r1"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
